--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,10 @@
         "type_traits": "cpp",
         "tuple": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "cstring": "cpp",
+        "complex": "cpp",
+        "deque": "cpp",
+        "iostream": "cpp"
     }
 }
